BUGFIX-1225: broken layout on some breakpoints

--- a/src/assets/css/address_balance.scss
+++ b/src/assets/css/address_balance.scss
@@ -78,7 +78,7 @@
         position: absolute;
         width: 10px;
         height: 10px;
-        top: 6px;
+        top: 8px;
         right: 2px;
         background-repeat: no-repeat;
       }
